--- a/style.css
+++ b/style.css
@@ -21,8 +21,8 @@ body {
 	padding: 30px;
 	margin: 0 15px;
 	background-color: #fff;
-	box-shadow: 0 5px 10px rgba(216, 216, 216, 0.1);
-    overflow-y: auto;
+	box-shadow: 0 5px 10px rgba(216, 216, 216, 0.2);
+    overflow-y: scroll;
 	overflow-x: hidden;
 }
 .container header {
@@ -95,7 +95,7 @@ form .fields .input-field {
 .input-field input,
 select {
 	outline: none;
-	font-size: 14px;
+	font-size: 12px;
 	font-weight: 400;
 	color: #333;
 	border-radius: 5px;
@@ -143,7 +143,7 @@ select {
 	font-weight: 400;
 }
 form button:hover {
-	background-color: #265df2;
+	background-color: #121212;
 }
 form button i,
 form .backBtn i {
@@ -263,6 +263,16 @@ form .buttons button,
 	padding: 0 10px;
 }
 
+/* Text Area */
+#text-area {
+    font-size: 12px;
+    min-height: 70px;
+    min-width: 100%;
+    border-radius: 10px;
+    padding: 10px;
+    border: 1px solid #c1c1c1;
+}
+
 @media (max-width: 750px) {
 	.container {
 		overflow-y: scroll;
@@ -273,6 +283,10 @@ form .buttons button,
 	}
 	form .fields .input-field {
 		width: calc(100% / 2 - 15px);
+	}
+	#text-area {
+    min-height: 40vh;
+    min-width: 100%;
 	}
 }
 
